--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "express": "^4.14.0",
     "morgan": "^1.7.0"
-  }
+  },
+  "repository": {
+  "type": "git",
+  "url": "git://github.com/username/repository.git"
+}
 }
