--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
   },
   "repository": {
   "type": "git",
-  "url": "git://github.com/username/repository.git"
+  "url": "git://github.com/Ramachandran61/repository.git"
 }
 }
