--- a/package.json
+++ b/package.json
@@ -16,4 +16,9 @@
   "type": "git",
   "url": "git://github.com/Ramachandran61/repository.git"
 }
+  "repository" : {     
+     "type" : "git",
+      "url" : "http://github.com/npm/express.git" 
+   }
+
 }
