--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
-  "name": "package.json",
+  "name": "imad-app",
   "version": "0.1.0",
   "description": "IMAD course app",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Ramachandran61/imad-app.git"
+  },
+   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.14.0",
     "morgan": "^1.7.0"
-  }
+  },
+  "homepage": "https://github.com/Ramachandran61/imad-app"
 }
